# toy-mlir-compiler

./: .clang-format  CMakeLists.txt
examples/: mul_trans.toy  mul_trans_simple.mlir  mul_trans_verbose.mlir  struct_mul_trans.toy  trivial_reshape.toy  trivial_transpose_transpose.toy
include/toy/ast/: ast.hpp
include/toy/core/: types.hpp
include/toy/dialect/: CMakeLists.txt  dialect.hpp  mlir_gen.hpp  ops.td  passes.hpp  shape_inference_interface.hpp  shape_inference_interface.td
include/toy/lexer/: lexer.hpp  location.hpp
include/toy/parser/: parser.hpp
include/toy/util/: line_reader.hpp  string_view_line_reader.hpp
lib/ast/: ast.cpp
lib/dialect/: dialect.cpp  lower_to_affine_loops_pass.cpp  lower_to_llvm_pass.cpp  mlir_gen.cpp  shape_interface_pass.cpp
lib/lexer/: lexer.cpp
lib/parser/: parser.cpp
lib/transforms/: CMakeLists.txt  simplify.cpp  simplify.td
tools/: CMakeLists.txt
tools/toyc/: CMakeLists.txt  toyc.cpp
unittests/: CMakeLists.txt  parser_test.cpp
